# transcribee

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  branching.md  roadmap.md
src/lnkdn_transcripts/: __init__.py  config.py  logging.py  main.py  templates.py
src/lnkdn_transcripts/routes/: api.py  auth.py  web.py
src/lnkdn_transcripts/services/: __init__.py  artifacts.py  audio.py  auth.py  background_jobs.py  exporters.py  fetcher.py  jobs.py  provider_urls.py  transcriber.py
src/lnkdn_transcripts/static/: styles.css
src/lnkdn_transcripts/storage/: models.py  repo.py
src/lnkdn_transcripts/templates/: access_admin.html  base.html  dashboard.html  history.html  index.html  job.html  login.html
src/transcribee/: __init__.py  cli.py  config.py  main.py  templates.py
src/transcribee/routes/: api.py  auth.py  dependencies.py  web.py
src/transcribee/services/: artifacts.py  audio.py  auth.py  background_jobs.py  exporters.py  fetcher.py  jobs.py  provider_urls.py
src/transcribee/services/transcriber/: __init__.py  _deepgram.py  _factory.py  _faster_whisper.py  _openai_api.py  _openai_whisper.py  _protocol.py  _whisper_cpp.py
src/transcribee/static/: styles.css
src/transcribee/storage/: repo.py
src/transcribee/templates/: access_requested.html  dashboard.html  history.html  index.html  job.html
tests/: conftest.py  test_cli.py  test_deepgram_segments.py  test_exporters.py  test_health.py  test_jobs_api.py  test_provider_urls.py  test_security.py  test_transcriber_factory.py  test_web_jobs.py
